--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lodash": "4.17.11",
     "prop-types": "15.6.2",
     "react": "16.3.2",
+    "react-abc": "^0.4.0",
     "react-dimensions": "1.3.1",
     "react-dom": "16.3.2",
     "react-piano": "3.1.0",
