--- a/package.json
+++ b/package.json
@@ -5,14 +5,16 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "bootstrap": "^4.3.1",
     "lodash": "4.17.11",
     "prop-types": "15.6.2",
-    "react": "16.3.2",
+    "react": "^16.8.4",
     "react-abc": "^0.4.0",
     "react-dimensions": "1.3.1",
-    "react-dom": "16.3.2",
+    "react-dom": "^16.8.4",
     "react-piano": "3.1.0",
     "react-scripts": "1.1.4",
+    "reactstrap": "^7.1.0",
     "soundfont-player": "latest"
   },
   "devDependencies": {},
