--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bootstrap": "^4.3.1",
     "file-saver": "^2.0.1",
     "html2canvas": "^1.0.0-rc.1",
+    "jspdf": "^1.5.3",
     "lodash": "4.17.11",
     "prop-types": "15.6.2",
     "react": "^16.8.4",
